Photo link edited ShardCloud

--- a/archive.html
+++ b/archive.html
@@ -48,7 +48,7 @@
         <img src="images/horseMountains.jpg" class="centered" alt="Horse Mountains" />
         <img src="images/manOxfordStreet.jpg" class="centered" alt="Man on Oxford Street" />
         <img src="images/shardClose.jpg" class="centered" alt="Shard Close" />
-        <img src="images/shardCloud.jpg" class="centered" alt="Shard and Cloud" />
+        <img src="images/shardCloudFilm.jpg" class="centered" alt="Shard and Cloud" />
       </div>
     </div>
   </main>
