--- a/archive.html
+++ b/archive.html
@@ -39,12 +39,19 @@
   <main>
     <div id="container-archive">
       <div class="all-images">
+        <article class="clearfix">
         <img src="images/berlinTeufelsBerg.jpg" class="centered" alt="Berlin Teufelsberg" />
+        <article class="clearfix">
         <img src="images/bigBenUdssrBlackandwhite.jpg" class="centered" alt="Big Ben UDSSR Flag" />
+        <article class="clearfix">
         <img src="images/millionMaskMarchBuckinghamPalace.jpg" class="centered" alt="Million Mask March Buckingham Palace" />
+        <article class="clearfix">
         <img src="images/horseMountains.jpg" class="centered" alt="Horse Mountains" />
+        <article class="clearfix">
         <img src="images/manOxfordStreet.jpg" class="centered" alt="Man on Oxford Street" />
+        <article class="clearfix">
         <img src="images/shardClose.jpg" class="centered" alt="Shard Close" />
+        <article class="clearfix">
         <img src="images/shardColourFilm.jpg" class="centered" alt="Shard and Cloud" />
       </div>
     </div>
