image loop, css, html

--- a/archive.html
+++ b/archive.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <header>
+    <article class="clearfix">
     <nav>
       <ul class="navlist">
         <li class="navlist-item">
@@ -37,28 +38,29 @@
       </nav>
     </header>
   <main>
+    <article class="clearfix">
     <div id="container-archive">
       <div class="all-images">
         <article class="clearfix">
-        <img src="images/berlinTeufelsBerg.jpg" class="centered" alt="Berlin Teufelsberg" />
+        <img src="images/berlinTeufelsBerg.jpg" class="right-aligned" alt="Berlin Teufelsberg" />
         <article class="clearfix">
-        <img src="images/bigBenUdssrBlackandwhite.jpg" class="centered" alt="Big Ben UDSSR Flag" />
+        <img src="images/bigBenUdssrBlackandwhite.jpg" class="right-aligned" alt="Big Ben UDSSR Flag" />
         <article class="clearfix">
-        <img src="images/millionMaskMarchBuckinghamPalace.jpg" class="centered" alt="Million Mask March Buckingham Palace" />
+        <img src="images/millionMaskMarchBuckinghamPalace.jpg" class="right-aligned" alt="Million Mask March Buckingham Palace" />
         <article class="clearfix">
-        <img src="images/horseMountains.jpg" class="centered" alt="Horse Mountains" />
+        <img src="images/horseMountains.jpg" class="right-aligned" alt="Horse Mountains" />
         <article class="clearfix">
-        <img src="images/manOxfordStreet.jpg" class="centered" alt="Man on Oxford Street" />
+        <img src="images/manOxfordStreet.jpg" class="right-aligned" alt="Man on Oxford Street" />
         <article class="clearfix">
-        <img src="images/shardClose.jpg" class="centered" alt="Shard Close" />
+        <img src="images/shardClose.jpg" class="right-aligned" alt="Shard Close" />
         <article class="clearfix">
-        <img src="images/shardColourFilm.jpg" class="centered" alt="Shard and Cloud" />
+        <img src="images/shardColourFilm.jpg" class="right-aligned" alt="Shard and Cloud" />
       </div>
     </div>
   </main>
   <footer>
+    <article class="clearfix">
     <ul class="footer-list">
-
       <li class="footer-item">
         <a class="footer-link" href="#">Twitter</a>
       </li>
@@ -68,13 +70,13 @@
         <li class="footer-item">
             <a class="footer-link" href="#">Email</a>
           </li>
-
     </ul>
   </footer>
 
 
 
 
-
+  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script src="js/index.js"></script>
 </body>
 </html>
