fixed footer, lightbox effect

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300|PT+Serif:700" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="http://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.css" />
+<style type="text/css">
+/*Lightbox Effect*/
+    a.fancybox img {
+        border: none;
+        box-shadow: 0 1px 7px rgba(0,0,0,0.6);
+        -o-transform: scale(1,1); -ms-transform: scale(1,1); -moz-transform: scale(1,1); -webkit-transform: scale(1,1); transform: scale(1,1); -o-transition: all 0.2s ease-in-out; -ms-transition: all 0.2s ease-in-out; -moz-transition: all 0.2s ease-in-out; -webkit-transition: all 0.2s ease-in-out; transition: all 0.2s ease-in-out;
+    }
+    a.fancybox:hover img {
+        position: relative; z-index: 999; -o-transform: scale(1.03,1.03); -ms-transform: scale(1.03,1.03); -moz-transform: scale(1.03,1.03); -webkit-transform: scale(1.03,1.03); transform: scale(1.03,1.03);
+    }
+</style>
 </head>
 <body>
   <header>
@@ -30,9 +42,8 @@
         <li class="navlist-item">
             <a class="navlink" href="#">Presentation</a>
           </li>
-            <!-- Add SearchBox float right -->
           <li class="navlist-item">
-            <a class="navlink" href="#">Search Box</a>
+            <input type="text" name="search" placeholder="Search..">
           </li>
         </ul>
       </nav>
@@ -40,7 +51,7 @@
   <main>
     <article class="clearfix">
     <div id="container">
-  		<img id="currentImage" src="images/berlinTeufelsBerg.jpg">
+  		<img id="currentImage" src="images/berlinTeufelsBerg.jpg"
   		<div id="buttons-wrapper">
   			<form>
   				<input type="button" class="btn" id="back" value="Back">
@@ -70,5 +81,28 @@
 
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="js/index.js"></script>
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.pack.min.js"></script>
+<script type="text/javascript">
+    $(function($){
+        var addToAll = true;
+        var gallery = false;
+        var titlePosition = 'inside';
+        $(addToAll ? 'img' : 'img.fancybox').each(function(){
+            var $this = $(this);
+            var title = $this.attr('title');
+            var src = $this.attr('data-big') || $this.attr('src');
+            var a = $('<a href="#" class="fancybox"></a>').attr('href', src).attr('title', title);
+            $this.wrap(a);
+        });
+        if (gallery)
+            $('a.fancybox').attr('rel', 'fancyboxgallery');
+        $('a.fancybox').fancybox({
+            titlePosition: titlePosition
+        });
+    });
+    $.noConflict();
+</script>
 </body>
 </html>
