--- a/archive.html
+++ b/archive.html
@@ -40,7 +40,7 @@
             <a class="navlink" href="#">Random</a>
           </li>
         <li class="navlist-item">
-            <a class="navlink" href="#">Presentation</a>
+            <a class="navlink" href="presentation.html">Presentation</a>
           </li>
             <!-- Add SearchBox float right -->
           <li class="navlist-item">
